# share

./: README.md  clientmain.cpp  header.hpp  servermain.cpp  test.txt
devInfoshare/: memo.txt
devInfoshare/InfoShare/: CMakeLists.txt  hpl_types.h  infoshare.cpp  infoshare.h  infoshare.proto  main.cpp
devInfoshare/InfoShare/try/: clientmain.cpp  header.hpp  servermain.cpp
devInfoshare/try_old/: CMakeLists.txt  client.cpp  clientmain.cpp  header.hpp  server.cpp  servermain.cpp
